<resources>
    <string name="app_name">YIKES</string>
    <string name="login">Logga in</string>
    <string name="password">Lösenord..</string>
    <string name="email">E-post..</string>
    <string name="register">Registrera</string>
    <string name="klicka_f_r_att_logga_in">Klicka för att logga in</string>
    <string name="klicka_f_r_att_registrera_dig">Klicka för att registrera dig</string>
    <string name="logout">Logout</string>
    <string name="skapa_ett_konto">Skapa ett konto</string>
    <string name="fyll_i_informationen_nedan">Fyll i informationen nedan</string>
    <string name="username">Användarnamn..</string>
    <string name="firstName">Förnamn..</string>
    <string name="lastName">Efternamn..</string>
    <string name="description">Beskrivning..</string>
    <string name="choose_qualifications">Välj kvalifikationer</string>
    <string name="city">Stad..</string>
    <string name="testaSOUT">Testa genom att skriv ut</string>
    <string name="searchCity">Sök efter en stad</string>
    <string name="goToMainActivity">Till huvudskärmen</string>
    <string name="profileSettings">Profilinställningar</string>
    <string name="dialog_messageUpdatePassword">ALERT DIALOG MESSAGE TEST</string>
    <string name="dialog_titleUpdatePassword">ALERT DIALOG TITLE TEST</string>
    <string name="change_password">Ändra lösenord</string>
    <string name="response_test">Response</string>
    <string name="choose_preference">Välj preferenser</string>
    <string name="delete_account">Ta bort konto</string>
    <string name="test">TEST</string>
    <string name="gender">Man eller kvinna?</string>
    <string name="search_username">Sök efter användarnamn</string>
    <string name="swap_search">Ändra sök</string>
    <string name="qualifications">Kvalifikatoner</string>
    <string name="go_back">Gå tillbaka</string>
    <string name="hmm">hmm</string>
    <string name="your_conversations">Dina konversationer</string>
    <string name="todo">TODO</string>
</resources>