<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:text="@string/fyll_i_informationen_nedan"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailLogIn"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:minWidth="48dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordLogIn"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:minWidth="48dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBarLogIn"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="#FF5722"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/logInNow"
        android:text="@string/klicka_f_r_att_registrera_dig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>