<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".NewUserFirstTimeLogin">

    <EditText
        android:id="@+id/editTextUsernameUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toTopOf="@+id/editTextFirstname" />

    <EditText
        android:id="@+id/editTextFirstnameUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/EditTextLastname"
        />

    <EditText
        android:id="@+id/EditTextLastnameUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/EditTextDescription" />

    <androidx.appcompat.widget.SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchCity"
        app:iconifiedByDefault="false"
        app:queryHint="Sök och välj en stad"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:id="@+id/listViewSearchCity"/>

    <EditText
        android:id="@+id/EditTextDescriptionUpdate"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:ems="10"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toTopOf="@+id/selectCard"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/selectCardUpdate"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewQualificationsUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/choose_qualifications"
                android:textColorHint="#757575"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_down"
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"
                tools:ignore="ContentDescription" />

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ändra lösenord"
        android:id="@+id/buttonUpdatePrivateInfo"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goToMainActivity"
        android:id="@+id/buttonGoToMainUpdate"/>

</LinearLayout>