<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/bakgrund"
    tools:context=".FriendsListActivity">

    <TextView
        android:paddingTop="15dp"
        android:text="@string/your_conversations"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageButton
        android:id="@+id/goBackImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:minHeight="48dp"
        android:src="@drawable/baseline_arrow_back"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck"
        android:contentDescription="@string/todo" />

    <androidx.appcompat.widget.SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchViewConversations"
        app:iconifiedByDefault="false"
        app:queryHint="Sök"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:id="@+id/listViewSearchConversations"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newConversationFloatingActionButton"
        android:src="@drawable/baseline_add_24"
        android:tint="@android:color/background_dark"
        android:backgroundTint="@color/orange"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:contentDescription="@string/hmm"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/goBackFriendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/orange"
        android:gravity="bottom"
        android:text="@string/go_back"
        android:textColor="#37474F" />

  </LinearLayout>